--- a/locale/cnr/translation.toml
+++ b/locale/cnr/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Glavni čvor" # Masternode
 navGovernance = "Vladanje" # Governance
 navSettings = "Podešavanja" # Settings
-footerBuiltWithPivxLabs = "Napravljeno sa 💜 od strane PIVX Labs" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Napravljeno sa 💜 od strane PIVX Labs" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Učitavanje" # Loading
 loadingTitle = "Moj ZENZO Novčanik je" # MyNEKOWallet is
 dCardOneTitle = "Napravi" # Create a
