--- a/locale/de/translation.toml
+++ b/locale/de/translation.toml
@@ -10,7 +10,7 @@ navStake = "Staking" # Stake
 navMasternode = "Masternodes" # Masternode
 navGovernance = "Regieren" # Governance
 navSettings = "Einstellungen" # Settings
-footerBuiltWithPivxLabs = "Mit 💜 erstellt - PIVX Labs 🇩🇪" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Mit 💜 erstellt - PIVX Labs 🇩🇪" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "...lädt..." # Loading
 loadingTitle = "Meine PIVX Geldbörse" # MyNEKOWallet is
 dCardOneTitle = "Erstelle eine" # Create a
