--- a/locale/en/translation.toml
+++ b/locale/en/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Governance" # Governance
 navSettings = "Settings" # Settings
-footerBuiltWithPivxLabs = "Built with 💜 by PIVX Labs" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Built with 💜 by NekoSuneVR (Fork of PIVX Labs)" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Loading" # Loading
 loadingTitle = "MyNEKOWallet is" # MyNEKOWallet is
 dCardOneTitle = "Create a" # Create a
