--- a/locale/es-mx/translation.toml
+++ b/locale/es-mx/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Gobernanza" # Governance
 navSettings = "Ajustes" # Settings
-footerBuiltWithPivxLabs = "Hecho con 💜 por PIVX Labs 🇲🇽" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Hecho con 💜 por PIVX Labs 🇲🇽" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Cargando" # Loading
 loadingTitle = "MyNEKOWallet está" # MyNEKOWallet is
 dCardOneTitle = "crea una" # Create a
