--- a/locale/fr/translation.toml
+++ b/locale/fr/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Gouvernance" # Governance
 navSettings = "Paramètres" # Settings
-footerBuiltWithPivxLabs = "Construit avec 💜 par PIVX Labs 🇫🇷" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Construit avec 💜 par PIVX Labs 🇫🇷" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Chargement" # Loading
 loadingTitle = "Mon portefeuille PIVX" # MyNEKOWallet is
 dCardOneTitle = "Créer le" # Create a
