--- a/locale/hi/translation.toml
+++ b/locale/hi/translation.toml
@@ -10,7 +10,7 @@ navStake = "स्टेक" # Stake
 navMasternode = "मास्टरनोड" # Masternode
 navGovernance = "गवर्नेंस" # Governance
 navSettings = "सेटिंग्स" # Settings
-footerBuiltWithPivxLabs = "PIVX लैब्स द्वारा 💜 के साथ निर्मित" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "PIVX लैब्स द्वारा 💜 के साथ निर्मित" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "लोड हो रहा है" # Loading
 loadingTitle = "मेरा PIVX वॉलेट है" # MyNEKOWallet is
 dCardOneTitle = "बनाएं" # Create a
