--- a/locale/it/translation.toml
+++ b/locale/it/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Governance" # Governance
 navSettings = "Impostazioni" # Settings
-footerBuiltWithPivxLabs = "Costruito col 💜 da PIVX Labs 🇮🇹" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Costruito col 💜 da PIVX Labs 🇮🇹" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Caricamento" # Loading
 loadingTitle = "Il mio Wallet PIVX" # MyNEKOWallet is
 dCardOneTitle = "Crea un " # Create a
