--- a/locale/nl/translation.toml
+++ b/locale/nl/translation.toml
@@ -10,7 +10,7 @@ navStake = "Staken" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Bestuur" # Governance
 navSettings = "Instellingen" # Settings
-footerBuiltWithPivxLabs = "Gemaakt met 💜 door PIVX Labs" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Gemaakt met 💜 door PIVX Labs" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Bezig met laden" # Loading
 loadingTitle = "Mijn PIVX-portemonnee is" # MyNEKOWallet is
 dCardOneTitle = "Maak een" # Create a
