--- a/locale/ph/translation.toml
+++ b/locale/ph/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stake" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Pamamahala" # Governance
 navSettings = "Settings" # Settings
-footerBuiltWithPivxLabs = "Binuo nang may 💜 ng PIVX Labs 🇵🇭" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Binuo nang may 💜 ng PIVX Labs 🇵🇭" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Loading" # Loading
 loadingTitle = "MyNEKOWallet ay" # MyNEKOWallet is
 dCardOneTitle = "Gumawa ng" # Create a
