--- a/locale/pl/translation.toml
+++ b/locale/pl/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stakuj" # Stake
 navMasternode = "Masternode" # Masternode
 navGovernance = "Zarządzanie" # Governance
 navSettings = "Ustawienia" # Settings
-footerBuiltWithPivxLabs = "Zbudowane z 💜 przez PIVX Labs" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Zbudowane z 💜 przez PIVX Labs" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Ładowanie" # Loading
 loadingTitle = "Portfel PIVX " # MyNEKOWallet is
 dCardOneTitle = "Stwórz" # Create a
