--- a/locale/pt-br/translation.toml
+++ b/locale/pt-br/translation.toml
@@ -1,5 +1,5 @@
 amount = "Quantidade" # Amount
-footerBuiltWithPivxLabs = "Construido com 💜 por PIVX Labs 🇧🇷" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Construido com 💜 por PIVX Labs 🇧🇷" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Carregando" # Loading
 dCardOneTitle = "Criar" # Create a
 dCardTwoDesc = "Criar uma carteira com um prefixo personalizado, isso pode levar bastante tempo!" # Create a wallet with a custom prefix, this can take a long time!
