--- a/locale/template/translation.toml
+++ b/locale/template/translation.toml
@@ -34,7 +34,7 @@ navStake = "Stake"
 navMasternode = "Masternode"
 navGovernance = "Governance"
 navSettings = "Settings"
-footerBuiltWithPivxLabs = "Built with 💜 by PIVX Labs"
+footerBuiltWithPivxLabs = "Built with 💜 by NekoSuneVR (Fork of PIVX Labs)"
 loading = "Loading"
 loadingTitle = "MyNEKOWallet is"
 dCardOneTitle = "Create a"
