--- a/locale/uwu/translation.toml
+++ b/locale/uwu/translation.toml
@@ -10,7 +10,7 @@ navStake = "Stakin'" # Stake
 navMasternode = "Masternowode" # Masternode
 navGovernance = "Gubernance" # Governance
 navSettings = "Configgy" # Settings
-footerBuiltWithPivxLabs = "Built with wuv by PIVX Wabs 💜" # Built with 💜 by PIVX Labs
+footerBuiltWithPivxLabs = "Built with wuv by PIVX Wabs 💜" # Built with 💜 by NekoSuneVR (Fork of PIVX Labs)
 loading = "Loading" # Loading
 loadingTitle = "My PIVX Wawwet is" # MyNEKOWallet is
 dCardOneTitle = "Cweate a" # Create a
